Add Ubuntu Desktop VM launch infrastructure for browser memory attacks
- Added launch_vulnerable_desktop.sh: QEMU script for vulnerable Ubuntu Desktop
  * 4GB RAM allocation for desktop environment and browsers
  * Shared memory setup for DMA attack access (/dev/shm/pasiv_vulnerable_memory)
  * KASLR disabled and security mitigations turned off for research
  * VNC, SSH, and QMP socket access configured
  * Optimized for browser memory analysis and testing

- Added check_iso_download.sh: Monitor Ubuntu ISO download progress
  * Real-time download status and percentage tracking
  * Validates complete download before VM launch

- Added vm_manager.sh: Central VM management interface
  * Start/stop VMs with single commands
  * Status monitoring and connection info
  * VNC and SSH connection helpers
  * Clean shutdown and resource cleanup

- Updated .gitignore: Added VM directories (vm_images/, iso_files/, shared_memory/)
  * Prevents accidentally committing large VM files and ISOs
  * Keeps repository clean while supporting local VM storage

Ready to launch Ubuntu Desktop for browser-based DMA attack research!

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,11 @@ dmypy.json
 *.img
 *.vmdk
 
+# VM directories with large files
+/vm_images/
+/iso_files/
+/shared_memory/
+
 # Shared memory files
 /dev/shm/*
 
